src/objects/Retail_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>Total_CAC_Source_Campaign_Member__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total CAC Source Campaign Member</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contacts__c</fullName>
        <label>Total Contacts</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Converted_Leads_in_Hierarchy__c</fullName>
        <label>Total Converted Leads in Hierarchy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Leads__c</fullName>
        <label>Total Leads</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Marketing_Budget__c</fullName>
        <formula>Q1_Marketing_Budget__c + Q2_Marketing_Budget__c + Q3_Marketing_Budget__c + Q4_Marketing_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Marketing Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Responses__c</fullName>
        <label>Total Responses</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Retail_Campaign_Members__c</fullName>
        <label>Total Retail Campaign Members</label>
        <summaryForeignKey>Retail_Campaign_Member__c.Retail_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Two_Percentage_Annual_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are included in the 2% annual audit</description>
        <label>2% Annual Audit Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unlock_Feedback_Check__c</fullName>
        <formula>Plan_End_Date__c + 90 &gt;  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unlock Feedback Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Y_AMG_Marketing_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AMG Marketing Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_AMG_Marketing_Expense__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AMG Marketing Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_After_sales_Marketing_Planned_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AS Marketing Planned Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_After_sales_Marketing_Target_Budget__c</fullName>
        <formula>IF( RecordType.DeveloperName == &apos;Sales_Marketing&apos; || RecordType.DeveloperName == &apos;Aftersales&apos;, Y_Total_After_sales_Turnover_of_Previous__c * 0.02, Total_AS_Turnover_of_Previous_Year__c * 0.02)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AS Marketing Target Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_Apply_Date__c</fullName>
        <label>Apply Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Y_Apply_Deadline__c</fullName>
        <label>Apply Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Y_Audited_Expense__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Audited Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_City__c</fullName>
        <formula>Y_Dealer_Name__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Y_Dealer_Code__c</fullName>
        <formula>Y_Dealer_Name__r.Dealer_ND_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Y_Dealer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Retail_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Y_Labor_Turnover__c</fullName>
        <label>Labor Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y_MB_Dealer_Driven_Marketing_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MB Dealer Driven Marketing Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_MB_Dealer_Driven_Marketing_Expense__c</fullName>
        <formula>Y_MB_Marketing_Expense__c * 0.7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MB Dealer Driven Marketing Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_MB_Joint_Marketing_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MB Joint Marketing Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_MB_Joint_Marketing_Expense__c</fullName>
        <formula>Y_MB_Marketing_Expense__c  * 0.3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MB Joint Marketing Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_MB_Marketing_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MB Marketing Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_MB_Marketing_Expense__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MB Marketing Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_No_of_Active_Customer__c</fullName>
        <label>No. of Active Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y_No_of_Insurance_Sold__c</fullName>
        <label>No. of Insurance Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y_No_of_Maintenance_Products_Sold__c</fullName>
        <label>No. of Maintenance Products Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y_Parts_Turnover__c</fullName>
        <label>Parts Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y_Region__c</fullName>
        <formula>TEXT(Y_Dealer_Name__r.Dealer_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Y_SMART_Marketing_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SMART Marketing Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_SMART_Marketing_Expense__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SMART Marketing Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Need Modify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Y_Sub_Region__c</fullName>
        <formula>TEXT(Y_Dealer_Name__r.Dealer_MB_Sub_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Y_Total_After_sales_Turnover_of_Previous__c</fullName>
        <label>Total AS Turnover of Previous Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Y_Total_Amount__c</fullName>
        <formula>M_Jan__c + M_Feb__c + M_Mar__c + M_Apr__c + M_May__c + M_Jun__c + M_Jul__c + M_Aug__c + M_Sep__c + M_Oct__c + M_Nov__c + M_Dec__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y_Vehicle_Throughput__c</fullName>
        <label>Vehicle Throughput</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Y_Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yearly_AS_Marketing_Target_Budget__c</fullName>
        <formula>Yearly_TA__r.Y_After_sales_Marketing_Target_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly AS Marketing Target Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_TA_Name__c</fullName>
        <formula>TEXT(YEAR(TODAY())) +  Y_Dealer_Name__r.Branch_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly TA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yearly_TA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Retail Campaign: Yearly TA which campaign belongs to</description>
        <label>Yearly TA</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Retail_Campaign__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Aftersales Yearly TA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Retail_Campaign__c</referenceTo>
        <relationshipLabel>Records (Retail Campaign)</relationshipLabel>
        <relationshipName>Retail_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hasError__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Update when theres an error on the auto-segmentation</description>
        <label>hasError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>migr_sourceid__c</fullName>
        <externalId>true</externalId>
        <label>migr sourceid</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Retail Campaign</label>
    <listViews>
        <fullName>AS_Retail_Campaign</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Code__c</columns>
        <columns>Driven__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Approver__c</columns>
        <columns>Apply_Status__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Feedback_Comments__c</columns>
        <columns>Relevant_Central_Campaign__c</columns>
        <columns>Relevant_Retail_Campaign__c</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>Showroom__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Retail_Campaign__c.AS_Retail_Campaign</value>
        </filters>
        <label>After sales activity plan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AS_Retail_Campaign_Feedback</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Code__c</columns>
        <columns>Driven__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Approver__c</columns>
        <columns>Apply_Status__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Feedback_Comments__c</columns>
        <columns>Relevant_Central_Campaign__c</columns>
        <columns>Relevant_Retail_Campaign__c</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>Showroom__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Retail_Campaign__c.AS_Retail_Campaign</value>
        </filters>
        <filters>
            <field>Apply_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <label>ApprovedAfterSales planning and feedback</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Campaign_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>zh_CN</language>
    </listViews>
    <listViews>
        <fullName>Retail_MB_Best_Practice</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Code__c</columns>
        <columns>Parent_Campaign__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Brand__c</columns>
        <columns>BP_Status__c</columns>
        <columns>Retail_Candidate__c</columns>
        <columns>Final_Best_Practice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Retail_Campaign__c.Retail_MB_Best_Practice</value>
        </filters>
        <label>MB Best activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Retail_smart_Best_Practice</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Code__c</columns>
        <columns>Parent_Campaign__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Brand__c</columns>
        <columns>BP_Status__c</columns>
        <columns>Retail_Candidate__c</columns>
        <columns>Final_Best_Practice_Forsmart__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Retail_Campaign__c.Retail_smart_Best_Practice</value>
        </filters>
        <label>smart Best activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>S_M_Event_Retail_Campaign</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Code__c</columns>
        <columns>migr_sourceid__c</columns>
        <columns>Driven__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>City__c</columns>
        <columns>Approver__c</columns>
        <columns>Apply_Status__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Feedback_Comments__c</columns>
        <columns>Relevant_Central_Campaign__c</columns>
        <columns>Relevant_Retail_Campaign__c</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Retail_Campaign__c.Retail_Event</value>
        </filters>
        <label>Sales activity plan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>S_M_Feedback_View</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Code__c</columns>
        <columns>migr_sourceid__c</columns>
        <columns>Driven__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>City__c</columns>
        <columns>Approver__c</columns>
        <columns>Apply_Status__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Feedback_Comments__c</columns>
        <columns>Relevant_Central_Campaign__c</columns>
        <columns>Relevant_Retail_Campaign__c</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Retail_Campaign__c.Retail_Event,Retail_Campaign__c.Retail_Media</value>
        </filters>
        <filters>
            <field>Apply_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Feedback_Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <filters>
            <field>Approver_Validation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Approved Sales planning and feedback</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>S_M_Media_Retail_Campaign</fullName>
        <columns>Campaign_Code__c</columns>
        <columns>NAME</columns>
        <columns>migr_sourceid__c</columns>
        <columns>Driven__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Apply_Status__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Approver__c</columns>
        <columns>Feedback_Comments__c</columns>
        <columns>Relevant_Central_Campaign__c</columns>
        <columns>Relevant_Retail_Campaign__c</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Retail_Campaign__c.Retail_Media</value>
        </filters>
        <label>Media activities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Segmentation_Only</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Code__c</columns>
        <columns>Driven__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Apply_Status__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Feedback_Comments__c</columns>
        <columns>Relevant_Central_Campaign__c</columns>
        <columns>Relevant_Retail_Campaign__c</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>Plan_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Retail_Campaign__c.Segmentation_Only</value>
        </filters>
        <label>Separate filter list</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Campaigns</pluralLabel>
    <recordTypes>
        <fullName>AS_Retail_Campaign</fullName>
        <active>true</active>
        <description>After sales activities</description>
        <label>AS Retail Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Aftersales</fullName>
        <active>true</active>
        <description>Aftermarket annual targets</description>
        <label>Aftersales Yearly TA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monthly_TA</fullName>
        <active>true</active>
        <description>Monthly goals</description>
        <label>Monthly TA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_Event</fullName>
        <active>true</active>
        <description>Project applications</description>
        <label>S&amp;M Event Retail Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_Execution_Campaign</fullName>
        <active>true</active>
        <description>子キャンペーン作成時に使用</description>
        <label>Campaign Execution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_MB_Best_Practice</fullName>
        <active>true</active>
        <description>Dealer MB Best activities</description>
        <label>Retail MB Best Practice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_Media</fullName>
        <active>true</active>
        <description>Media plan application</description>
        <label>S&amp;M Media Retail Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_Parent_Campaign</fullName>
        <active>true</active>
        <description>親キャンペーン作成時に使用</description>
        <label>Planning &amp; Design Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_smart_Best_Practice</fullName>
        <active>true</active>
        <description>Dealer smart best activities</description>
        <label>Retail smart Best Practice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Marketing</fullName>
        <active>true</active>
        <description>Sales annual objectives</description>
        <label>Sales &amp; Marketing Yearly TA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Segmentation_Only</fullName>
        <active>true</active>
        <description>Independent filtering，No application feedback， Not included in our target market appraisal</description>
        <label>Segmentation Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Dealer_Campaign_Share__c</fullName>
        <label>Dealer Campaign Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>A_Start_Date_is_less_than_the_A_End_Date</fullName>
        <active>true</active>
        <description>Actual Start Date later than Actual Start Date</description>
        <errorConditionFormula>AND( 
OR(RecordType.Name ==&apos;AS Retail Campaign&apos;,
RecordType.Name ==&apos;S&amp;M Event Retail Campaign&apos;,
RecordType.Name ==&apos;S&amp;M Media Retail Campaign&apos;
),
Actual_Start_Date__c &gt; Actual_End_Date__c,
$Profile.Name != &apos;IntegrationAPI&apos;
)</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>Actual Start Date must be less than or equal to Actual End Dat</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apply_Deadline_must_later_than_today</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
AND(
RecordType.Name == &apos;Sales &amp; Marketing Yearly TA&apos;, ISCHANGED(Y_Apply_Deadline__c),
$Profile.Name != &apos;IntegrationAPI&apos;), 
Y_Apply_Deadline__c &lt; TODAY(), 
false)</errorConditionFormula>
        <errorDisplayField>Y_Apply_Deadline__c</errorDisplayField>
        <errorMessage>Apply Deadline must later than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Auto_Segmentation_Criteria</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($Profile.Name != &apos;IntegrationAPI&apos;),( Auto_Segmentation__c = TRUE),MD__c = &apos;JP&apos;,(ISBLANK(Segmentation_Criteria__c ) ))</errorConditionFormula>
        <errorMessage>Field Is Mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Couldnot_Update_Monthly</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  
OR(ISPICKVAL(M_YearlyTA__r.Y_Status__c, &apos;Confirmed&apos;) , ISPICKVAL(M_YearlyTA__r.Y_Status__c, &apos;Approved&apos;) 
), 
RecordType.DeveloperName == &apos;Monthly_TA&apos;,
$Profile.Name != &apos;IntegrationAPI&apos;
)</errorConditionFormula>
        <errorMessage>You can&apos;t update Monthly information with current YearlyTA status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Couldnot_Update_Region_Recommend</fullName>
        <active>true</active>
        <description>Couldnot_Update_Region_Recommend Region best practice is false.</description>
        <errorConditionFormula>AND(
OR( 
RecordType.Name == &apos;Retail MB Best Practice&apos;, 
RecordType.Name == &apos;Retail smart Best Practice&apos; 
), 
 NOT(Region_Best_Practice__c),
 Region_Recommendation__c,
 $Profile.Name != &apos;IntegrationAPI&apos;
)</errorConditionFormula>
        <errorMessage>Only the candidate is marked as Region Best, the Region Recommend can be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Couldnot_Update_Retail_Candidate</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
RecordType.Name == &apos;Retail MB Best Practice&apos;, 
RecordType.Name == &apos;Retail smart Best Practice&apos; 
), 
or(
ISPICKVAL(BP_Status__c, &apos;Retail Submit&apos;),
ISPICKVAL(BP_Status__c, &apos;Region Submit&apos;),
ISPICKVAL(BP_Status__c, &apos;Final Submit&apos;)
),
ISCHANGED( Retail_Candidate__c),
$Profile.Name != &apos;IntegrationAPI&apos;
)</errorConditionFormula>
        <errorMessage>You Couldn&apos;t Update Retail Candidate With Current Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DM_Material_Template_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
$Profile.Name !=&apos;IntegrationAPI&apos;,
ISBLANK(DM_Template__c),
ISPICKVAL(Execution_Type__c,&quot;DM&quot;),
Record_Type_Name__c = &apos;Campaign Execution&apos;,
MD__c =&apos;JP&apos;
)</errorConditionFormula>
        <errorDisplayField>DM_Template__c</errorDisplayField>
        <errorMessage>DM Material Template is reqired when execution type is DM</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dealer_Couldnot_update_Retail_BP</fullName>
        <active>true</active>
        <description>Dealer Couldn&apos;t update Retail MB or smart BP After Retail Due Date - Generation Process</description>
        <errorConditionFormula>AND(
OR(
RecordType.Name == &apos;Retail MB Best Practice&apos;,
RecordType.Name == &apos;Retail smart Best Practice&apos;
),
Parent_Campaign__r.Retail_Due_Date__c &gt;= TODAY() + 1,
ISCHANGED(Name),
ISCHANGED(Parent_Campaign__c),
ISCHANGED(Dealer_Name__c),
ISCHANGED(Brand__c),
ISCHANGED(BP_Status__c),
ISCHANGED(Comments__c),
ISCHANGED(Retail_Candidate__c),
ISCHANGED(BP_Category__c),
ISCHANGED(Region_Best_Practice__c),
ISCHANGED(Region_Recommendation__c),
ISCHANGED(Final_Best_Practice__c),
ISCHANGED(Final_Best_Practice_Forsmart__c),
$Profile.Name != &apos;System Administrator&apos;,
$Profile.Name != &apos;IntegrationAPI&apos;
)</errorConditionFormula>
        <errorMessage>You couldn&apos;t update this record, because due date is reached.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delay_Reason_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( RecordType.Name ==&apos;AS Retail Campaign&apos;,
RecordType.Name ==&apos;S&amp;M Event Retail Campaign&apos;,
RecordType.Name ==&apos;S&amp;M Media Retail Campaign&apos;
), 
Plan_Start_Date__c &lt; TODAY(), 
ISBLANK( Delay_Reason__c ),  
(ISCHANGED(Plan_Start_Date__c) ||  ISNEW()),
$Profile.Name != &apos;IntegrationAPI&apos;
)</errorConditionFormula>
        <errorDisplayField>Delay_Reason__c</errorDisplayField>
        <errorMessage>Delay Reason is mandatory when Plan Start Date is earlier than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Feedback_Mandatory_Actual_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  
ISPICKVAL(Apply_Status__c, &apos;Approved&apos;), ISPICKVAL(Feedback_Status__c, &apos;Confirmed&apos;),
ISBLANK( Actual_End_Date__c ),
$Profile.Name != &apos;IntegrationAPI&apos;
)</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>Actual End Date field is mandatory when Submit for Feedback.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Feedback_Mandatory_Actual_Expense</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  
ISPICKVAL(Apply_Status__c, &apos;Approved&apos;), ISPICKVAL(Feedback_Status__c, &apos;Confirmed&apos;),
ISBLANK( Actual_Expense__c ), 
$Profile.Name != &apos;IntegrationAPI&apos;
)</errorConditionFormula>
        <errorDisplayField>Actual_Expense__c</errorDisplayField>
        <errorMessage>Actual Expense field is mandatory when Submit for Feedback.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Feedback_Mandatory_Actual_Order</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
RecordType.Name == &apos;S&amp;M Event Retail Campaign&apos;, ISPICKVAL(Apply_Status__c, &apos;Approved&apos;), ISPICKVAL(Feedback_Status__c, &apos;Confirmed&apos;),
ISBLANK( Actual_Order__c ),
$Profile.Name != &apos;IntegrationAPI&apos;
)</errorConditionFormula>
        <errorDisplayField>Actual_Order__c</errorDisplayField>
        <errorMessage>Actual Order field is mandatory when Submit for Feedback.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Feedback_Mandatory_Actual_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  
ISPICKVAL(Apply_Status__c, &apos;Approved&apos;), ISPICKVAL(Feedback_Status__c, &apos;Confirmed&apos;),
ISBLANK( Actual_Start_Date__c ),
$Profile.Name != &apos;IntegrationAPI&apos;
)</errorConditionFormula>
        <errorDisplayField>Actual_Start_Date__c</errorDisplayField>
        <errorMessage>Actual Start Date field is mandatory when Submit for Feedback.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Feedback_Mandatory_Feedback_Comments</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  
ISPICKVAL(Apply_Status__c, &apos;Approved&apos;), ISPICKVAL(Feedback_Status__c, &apos;Confirmed&apos;),
ISBLANK( Feedback_Comments__c ),
$Profile.Name != &apos;IntegrationAPI&apos;
)</errorConditionFormula>
        <errorDisplayField>Feedback_Comments__c</errorDisplayField>
        <errorMessage>Feedback Comments field is mandatory when Submit for Feedback.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Car_Age_is_less_than_the_Max_Car_Age</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.Name == &apos;AS Retail Campaign&apos;,
Min_Car_Age__c &gt; Max_Car_Age__c,
$Profile.Name != &apos;IntegrationAPI&apos;
)</errorConditionFormula>
        <errorMessage>Min Car Age must be less than or equal to Max Car Age</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_add_Members_for_Approved_Campaign</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Total_Retail_Campaign_Members__c ) &amp;&amp; NOT(ISPICKVAL( Apply_Status__c, &apos;Approved&apos; )) &amp;&amp; ( RecordType.Name = &apos;AS Retail Campaign&apos; || RecordType.Name = &apos;S&amp;M Event Retail Campaign&apos; || RecordType.Name = &apos;S&amp;M Media Retail Campaign&apos;) &amp;&amp; $Profile.Name != &apos;IntegrationAPI&apos;</errorConditionFormula>
        <errorMessage>You can&apos;t add or delete Retail Campaign Members for Non-Approved Campaigns.</errorMessage>
    </validationRules>
</CustomObject>